Committee is ready

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Document</title>
+    <title>CASCADE 2021</title>
 </head>
 
 <body>
@@ -161,7 +161,183 @@
                 <h2 class="display-5 mb-4">
                     Conference Organizing Committee
                 </h2>
-
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel"  data-interval="3000" data-pause="true">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="card-deck mb-4">
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card-deck mb-4">
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card-deck mb-4">
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="card mb-4 shadow-sm h-auto col p-0">
+                                    <div class="card-body p-1 ">
+                                        <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                                    </div>
+                                    <div class="card-footer bg-white p-0 border-top-0">
+                                        <b>
+                                            Lorem ipsum
+                                        </b>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-7">
+                <h2 class="display-5 mb-4">
+                    Intenational scientific & technical committee honorable speakers
+                </h2>
                 <div class="card-deck mb-4">
                     <div class="card mb-4 shadow-sm h-auto col p-0">
                         <div class="card-body p-1 ">
@@ -216,8 +392,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-7">
+                <h2 class="display-5 mb-4">
+                    Keynote speakers
+                </h2>
                 <div class="card-deck mb-4">
-                    <div class="card mb-4 shadow-sm h-auto col p-0">
+                    <div class="card mb-4 shadow-sm h-auto col p-0 mr-xl-5">
                         <div class="card-body p-1 ">
                             <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
                         </div>
@@ -230,20 +411,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card mb-4 shadow-sm h-auto col p-0">
-                        <div class="card-body p-1 ">
-                            <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
-                        </div>
-                        <div class="card-footer bg-white p-0 border-top-0">
-                            <b>
-                                Lorem ipsum
-                            </b>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card mb-4 shadow-sm h-auto col p-0">
+                    <div class="card mb-4 shadow-sm h-auto col p-0 mr-xl-5">
                         <div class="card-body p-1 ">
                             <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
                         </div>
@@ -271,7 +439,20 @@
                     </div>
                 </div>
                 <div class="card-deck mb-4">
-                    <div class="card mb-4 shadow-sm h-auto col p-0">
+                    <div class="card mb-4 shadow-sm h-auto col p-0 mr-xl-5">
+                        <div class="card-body p-1 ">
+                            <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
+                        </div>
+                        <div class="card-footer bg-white p-0 border-top-0">
+                            <b>
+                                Lorem ipsum
+                            </b>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card mb-4 shadow-sm h-auto col p-0 mr-xl-5">
                         <div class="card-body p-1 ">
                             <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
                         </div>
@@ -297,32 +478,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card mb-4 shadow-sm h-auto col p-0">
-                        <div class="card-body p-1 ">
-                            <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
-                        </div>
-                        <div class="card-footer bg-white p-0 border-top-0">
-                            <b>
-                                Lorem ipsum
-                            </b>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card mb-4 shadow-sm h-auto col p-0">
-                        <div class="card-body p-1 ">
-                            <img src="img/place-holder-committee.png" width="100%" height="auto" alt="">
-                        </div>
-                        <div class="card-footer bg-white p-0 border-top-0">
-                            <b>
-                                Lorem ipsum
-                            </b>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
