roadmap is ready

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
                                 <div class="place-holder">
 
                                 </div>
-                                <!-- <img src="img/place-holder-img.jpg" width="480px" height="480px" alt="image"> -->
                                 <p>Some representative placeholder content for the third slide of this carousel.</p>
                                 <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
                             </div>
@@ -98,14 +97,14 @@
             </div>
         </section>
         <section class="theme">
-            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-7">
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
                 <h1 class="display-4">Sustainable Agriculture Development in Central Asia and South Caucasus</h1>
                 <div class="container">
                     <div class="card-deck mb-4 text-center">
                         <a class="col p-0" href="#">
-                            <div class="card mb-4 shadow-sm h-auto">
+                            <div class="card shadow-sm">
                                 <div class="card-body p-1">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="auto" alt="">
+                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
                                 </div>
                                 <div class="card-footer bg-white p-0 border-top-0">
                                     <p>
@@ -116,13 +115,13 @@
                         </a>
 
                         <a class="col p-0" href="#">
-                            <div class="card mb-4 shadow-sm h-auto">
+                            <div class="card mb-4 shadow-sm">
                                 <div class="card-body p-1">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="auto" alt="">
+                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
                                 </div>
                                 <div class="card-footer bg-white p-0 border-top-0">
                                     <p>
-                                        Requirements for articles
+                                        Requirements
                                     </p>
                                 </div>
                             </div>
@@ -131,7 +130,7 @@
                         <a class="col p-0" href="#">
                             <div class="card mb-4 shadow-sm h-auto">
                                 <div class="card-body p-1 ">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="auto" alt="">
+                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
                                 </div>
                                 <div class="card-footer bg-white p-0 border-top-0">
                                     <p>
@@ -144,7 +143,7 @@
                         <a class="col p-0" href="#">
                             <div class="card mb-4 shadow-sm h-auto">
                                 <div class="card-body p-1">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="auto" alt="">
+                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
                                 </div>
                                 <div class="card-footer bg-white p-0 border-top-0 ">
                                     <p>
@@ -157,11 +156,12 @@
                 </div>
         </section>
         <section class="committee">
-            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-7">
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
                 <h2 class="display-5 mb-4">
                     Conference Organizing Committee
                 </h2>
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel"  data-interval="3000" data-pause="true">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="3000"
+                    data-pause="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="card-deck mb-4">
@@ -334,7 +334,7 @@
                     </div>
                 </div>
             </div>
-            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-7">
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
                 <h2 class="display-5 mb-4">
                     Intenational scientific & technical committee honorable speakers
                 </h2>
@@ -393,7 +393,7 @@
                     </div>
                 </div>
             </div>
-            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-7">
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
                 <h2 class="display-5 mb-4">
                     Keynote speakers
                 </h2>
@@ -478,8 +478,104 @@
                             </p>
                         </div>
                     </div>
-                    
+
                 </div>
+            </div>
+        </section>
+        <section class="roadmap">
+            <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
+                <ul class="event-list p-0">
+                    <li class="event-list-item">
+                        <div class="event-block d-flex flex-row mb-3 pb-3">
+                            <div class="date-block date-block d-flex flex-column">
+                                <span class="week">
+                                    Wed-Fri
+                                </span>
+                                <span class="date font-weight-bolder">
+                                    09-11
+                                </span>
+                                <span class="month font-weight-bold">
+                                    Nov
+                                </span>
+                            </div>
+                            <div class="event-name d-flex align-items-center ml-5">
+                                <span class="display-4">Regisrtation</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="event-list-item">
+                        <div class="event-block d-flex flex-row mb-3 pb-3">
+                            <div class="date-block date-block d-flex flex-column">
+                                <span class="week">
+                                    Wed-Fri
+                                </span>
+                                <span class="date font-weight-bolder">
+                                    09-11
+                                </span>
+                                <span class="month font-weight-bold">
+                                    Nov
+                                </span>
+                            </div>
+                            <div class="event-name d-flex align-items-center ml-5">
+                                <span class="display-4">Acceptance of articles</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="event-list-item">
+                        <div class="event-block d-flex flex-row mb-3 pb-3">
+                            <div class="date-block date-block d-flex flex-column">
+                                <span class="week">
+                                    Wed-Fri
+                                </span>
+                                <span class="date font-weight-bolder">
+                                    09-11
+                                </span>
+                                <span class="month font-weight-bold">
+                                    Nov
+                                </span>
+                            </div>
+                            <div class="event-name d-flex align-items-center ml-5">
+                                <span class="display-4">Confirmation of acceptance</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="event-list-item">
+                        <div class="event-block d-flex flex-row mb-3 pb-3">
+                            <div class="date-block date-block d-flex flex-column">
+                                <span class="week">
+                                    Wed-Fri
+                                </span>
+                                <span class="date font-weight-bolder">
+                                    09-11
+                                </span>
+                                <span class="month font-weight-bold">
+                                    Nov
+                                </span>
+                            </div>
+                            <div class="event-name d-flex align-items-center ml-5">
+                                <span class="display-4">Regisrtation fee</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="event-list-item">
+                        <div class="event-block__end d-flex flex-row mb-3 pb-3">
+                            <div class="date-block date-block d-flex flex-column">
+                                <span class="week">
+                                    Wed-Fri
+                                </span>
+                                <span class="date font-weight-bolder">
+                                    09-11
+                                </span>
+                                <span class="month font-weight-bold">
+                                    Nov
+                                </span>
+                            </div>
+                            <div class="event-name d-flex align-items-center ml-5">
+                                <span class="display-4">Date of the conference</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
