start to translate the page

--- a/index(uz).html
+++ b/index(uz).html
@@ -18,15 +18,15 @@
             class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-light shadow-sm m-bottom-0 fixed-top nav-fixed">
             <h5 class="my-0 mr-md-auto font-weight-normal">Cascade 2021</h5>
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark home" href="#">Home</a>
-                <a class="p-2 text-dark commitee" href="#">Commitee</a>
-                <a class="p-2 text-dark Registration" href="#">Registration</a>
-                <a class="p-2 text-dark" href="#">Venue</a>
-                <a class="p-2 text-dark" href="#">Contact</a>
+                <a class="p-2 text-dark home" href="#">Uy</a>
+                <a class="p-2 text-dark commitee" href="#">Qo'mita</a>
+                <a class="p-2 text-dark Registration" href="#">Roʻyxatdan oʻtish</a>
+                <a class="p-2 text-dark" href="#">Joy</a>
+                <a class="p-2 text-dark" href="#">Aloqa</a>
                 <a class="pl-5 pr-1 text-dark" href="index.html">EN</a>
                 <a class="p-0 text-dark" href="#">|</a>
                 <a class="p-1 text-dark disabled" href="index(ru).html">RU</a>
-                <a class="p-0 text-dark disabled" href="in">|</a>
+                <a class="p-0 text-dark disabled" href="#">|</a>
                 <a class="pl-1 pr-2 text-dark" href="index(uz).html">UZ</a>
 
             </nav>
@@ -98,7 +98,7 @@
         </section>
         <section class="theme">
             <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
-                <h1 class="display-4">Sustainable Agriculture Development in Central Asia and South Caucasus</h1>
+                <h1 class="display-4">Markaziy Osiyo va Janubiy Kavkazda qishloq xo‘jaligining barqaror rivojlanishi</h1>
                 <div class="container">
                     <div class="card-deck mb-4 text-center">
                         <a class="col p-0" href="#">
