--- a/index(ru).html
+++ b/index(ru).html
@@ -18,16 +18,16 @@
             class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-light shadow-sm m-bottom-0 fixed-top nav-fixed">
             <h5 class="my-0 mr-md-auto font-weight-normal">Cascade 2021</h5>
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark home" href="#">Home</a>
-                <a class="p-2 text-dark commitee" href="#">Commitee</a>
-                <a class="p-2 text-dark Registration" href="#">Registration</a>
-                <a class="p-2 text-dark" href="#">Venue</a>
-                <a class="p-2 text-dark" href="#">Contact</a>
-                <a class="pl-5 pr-1 text-dark" href="index.html">EN</a>
+                <a class="p-2 text-dark home" href="#">Домой</a>
+                <a class="p-2 text-dark commitee" href="#">Комитет</a>
+                <a class="p-2 text-dark Registration" href="#">Регистрация</a>
+                <a class="p-2 text-dark" href="#">Место провидение</a>
+                <a class="p-2 text-dark" href="#">Контакты</a>
+                <a class="pl-5 pr-1 text-dark en" href="index.html">EN</a>
                 <a class="p-0 text-dark" href="#">|</a>
-                <a class="p-1 text-dark disabled" href="index(ru).html">RU</a>
-                <a class="p-0 text-dark disabled" href="in">|</a>
-                <a class="pl-1 pr-2 text-dark" href="index(uz).html">UZ</a>
+                <a class="p-1 text-dark disabled ru" href="index(ru).html">RU</a>
+                <a class="p-0 text-dark disabled" href="#">|</a>
+                <a class="pl-1 pr-2 text-dark uz" href="index(uz).html">UZ</a>
 
             </nav>
         </div>
@@ -98,7 +98,8 @@
         </section>
         <section class="theme">
             <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
-                <h1 class="display-4">Sustainable Agriculture Development in Central Asia and South Caucasus</h1>
+                <h1 class="display-4">
+                    Устойчивое развитие сельского хозяйства в Центральной Азии и Южном Кавказе</h1>
                 <div class="container">
                     <div class="card-deck mb-4 text-center">
                         <a class="col p-0" href="#">
