Anchor cards is fixed

--- a/index.html
+++ b/index.html
@@ -99,61 +99,41 @@
         <section class="theme">
             <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
                 <h1 class="display-4">Sustainable Agriculture Development in Central Asia and South Caucasus</h1>
-                <div class="container">
-                    <div class="card-deck mb-4 text-center">
-                        <a class="col p-0" href="#">
-                            <div class="card shadow-sm">
-                                <div class="card-body p-1">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
-                                </div>
-                                <div class="card-footer bg-white p-0 border-top-0">
-                                    <p>
-                                        Plenary and breakout
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a class="col p-0" href="#">
-                            <div class="card mb-4 shadow-sm">
-                                <div class="card-body p-1">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
-                                </div>
-                                <div class="card-footer bg-white p-0 border-top-0">
-                                    <p>
-                                        Requirements
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a class="col p-0" href="#">
-                            <div class="card mb-4 shadow-sm h-auto">
-                                <div class="card-body p-1 ">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
-                                </div>
-                                <div class="card-footer bg-white p-0 border-top-0">
-                                    <p>
-                                        Regisrtation
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a class="col p-0" href="#">
-                            <div class="card mb-4 shadow-sm h-auto">
-                                <div class="card-body p-1">
-                                    <img src="img/place-holder-img.jpg" width="100%" height="100%" alt="">
-                                </div>
-                                <div class="card-footer bg-white p-0 border-top-0 ">
-                                    <p>
-                                        EasyChair
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+                <div class="card-container mb-4">
+                    <a href="#" class="card-item">
+                        <img src="img/place-holder-img.jpg" alt="" class="card-image">
+                        <h4 class="card-main-text">Plenary and breakout sessions of the conference</h4>
+                        <hr>
+                        <span class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </span>
+                    </a>
+                    <a href="#" class="card-item">
+                        <img src="img/place-holder-img.jpg" alt="" class="card-image">
+                        <h4 class="card-main-text">Requirements for articles</h4>
+                        <hr>
+                        <span class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </span>
+                    </a>
+                    <a href="#" class="card-item">
+                        <img src="img/place-holder-img.jpg" alt="" class="card-image">
+                        <h4 class="card-main-text">Regisrtation</h4>
+                        <hr>
+                        <span class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </span>
+                    </a>
+                    <a href="#" class="card-item">
+                        <img src="img/place-holder-img.jpg" alt="" class="card-image">
+                        <h4 class="card-main-text">EasyChair</h4>
+                        <hr>
+                        <span class="card-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </span>
+                    </a>
                 </div>
+            </div>   
         </section>
         <section class="committee">
             <div class="px-3 py-3 pt-md-3 pb-md-2 mx-auto text-center col-8">
